# bail_gada

./: .gitignore  README.md  sim_world_test.pcd
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_bringup/share/robot_bringup/: package.sh  package.xml
install/robot_bringup/share/robot_bringup/launch/: bringup.launch.py  navigation.launch.py  sim_mapping.launch.py  sim_navigation.launch.py
install/robot_bringup/share/robot_bringup/params/: nav2_params.yaml  sim_nav2_params.yaml
install/robot_bringup/share/robot_bringup/rviz/: mapping.rviz
log/: latest_build  latest_list
src/: 4_way_point_initial.py  modified_logic.py
src/base_pkg/: setup.py
src/base_pkg/base_pkg/: 0cmd_node_converter.py  cmd_node_test.py  joy_node.py  odom_node.py  relay_node.py
src/base_pkg/launch/: joy_cmd.launch.py
src/livox_to_pointcloud2/: CMakeLists.txt
src/livox_to_pointcloud2/include/: pointcloud2_to_livox.hpp
src/livox_to_pointcloud2/src/: livox_to_pointcloud2.cpp  pointcloud2_to_livox.cpp  pointcloud2_to_livox_node.cpp
src/myrobot_description/: CMakeLists.txt
src/myrobot_description/launch/: rsp.launch.py
src/myrobot_description/worlds/: around_rc.world
src/pointcloud_to_laserscan/: CMakeLists.txt
src/pointcloud_to_laserscan/src/: pc_to_ls_node.cpp  pointcloud_to_laserscan_node.cpp
src/robot_bringup/: CMakeCache.txt  CMakeLists.txt
src/robot_bringup/launch/: navigation.launch.py  sim_navigation.launch.py
src/robot_bringup/params/: nav2_params.yaml  sim_nav2_params.yaml
src/robot_bringup/rviz/: robot_disp.rviz
src/robot_bringup/worlds/: around_rc.world  sim_test_world.world
src/transform_mid360/: CMakeLists.txt  package.xml
(+45 files in other folders)
