<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launches multiple ROS 2 nodes for LIDAR processing</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Dependencies for external packages -->
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>livox_to_pointcloud2</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>transform_mid360</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>myrobot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>